# transcribe

./: .coverage  .gitignore  AGENTS.md  README.md  REGULATORY_CHECKLIST.md  REGULATOR_COMPLIANCE_POLICY.md  clinical note synthesis llm prompt.md  clinical_note_synthesis_llm_prompt.md  main.py  packaged_main.py  packaged_ui_main.py  pyproject.toml
packaging/windows/: new_transcribe_installer.iss  nuitka-librosa-workaround.yml  transcribe.iss  transcribe_installer.iss
scripts/: build_windows_standalone.py  check_no_urls.py  new_build_windows_standalone.py
test_files/: clean_transcript.txt  ground_truth_transcription.txt  transcript.txt  whats_this.md
tests/: test_audio_backend_loader.py  test_bench.py  test_bench_cli.py  test_build_windows_standalone.py  test_capture_integration.py  test_cli_network.py  test_compliance_network.py  test_compliance_urls.py  test_config.py  test_init_bench_cli.py  test_linux_capture_backend.py  test_live_session.py  test_logging_redaction.py  test_network_guard.py  test_new_build_windows_standalone.py  test_notes.py  test_packaged_assets.py  test_packaged_cli.py  test_packaged_main.py  test_runtime_env.py  test_sync.py  test_test_cov.py  test_transcription_runtime.py  test_ui.py  test_ui_services_models.py
transcribe/: __init__.py  cli.py  compliance.py  config.py  logging.py  models.py  network_guard.py  notes.py  packaged_asset_defaults.py  packaged_assets.py  packaged_cli.py  packaged_ui.py  runtime_defaults.py  runtime_env.py  test_cov.py  transcription_runtime.py
transcribe/audio/: __init__.py  backend_loader.py  interfaces.py  linux_capture.py  resample.py  runner.py  sync.py  windows_capture.py
transcribe/bench/: __init__.py  cli.py  harness.py  init_cli.py  report.py
transcribe/io/: __init__.py  session_manifest.py  wav_writer.py
transcribe/live/: __init__.py  session.py
transcribe/ui/: __init__.py  app.py  controller.py  preferences.py  services.py  types.py
transcribe/utils/: stats.py
