[project]
name = "transcribe"
version = "0.1.0"
description = "HIPAA aware transcription and client note utility for psychotherapists"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "sounddevice>=0.5.2",
]

[project.scripts]
transcribe = "transcribe.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.4.0",
  "pytest-cov>=6.2.0",
  "ruff>=0.13.0",
  "mypy>=1.18.0",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"
