[project]
name = "transcribe"
version = "0.1.0"
description = "HIPAA aware transcription and client note utility for psychotherapists"
readme = "README.md"
requires-python = ">=3.13, <3.14"
dependencies = [
  "datasets>=4.6.1",
  "faster-whisper>=1.2.1",
  "hf-xet>=1.3.2",
  "soundcard>=0.4.5",
  "sounddevice>=0.5.2",
  "torch>=2.10.0",
  "torchcodec>=0.10.0",
]

[project.optional-dependencies]
granite-asr = [
  "torchaudio>=2.10.0",
  "transformers>=4.57.6,<5",
]
nemo-asr = ["nemo_toolkit[asr]"]
qwen-asr = ["qwen-asr"]
asr-backends = [
  "torchaudio>=2.10.0",
  "transformers>=4.57.6,<5",
  "nemo_toolkit[asr]",
  "qwen-asr",
]

[project.scripts]
transcribe = "transcribe.cli:main"
transcribe-ui = "transcribe.ui.app:main"
bench = "transcribe.bench.cli:main"
init-bench = "transcribe.bench.init_cli:main"
test-cov = "transcribe.test_cov:main"

[dependency-groups]
dev = [
  "pytest>=8.4.0",
  "pytest-cov>=6.2.0",
  "ruff>=0.13.0",
  "mypy>=1.18.0",
  "ty>=0.0.24",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.black]
line-length = 120
